--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,8 +7,9 @@
       {{ partial "tags" .Params.tags }}
       {{ end }}
     </div>
-    {{if not .Date.IsZero }}<h2 class="subtitle is-6">{{ .Date.Format "January 2, 2006" }}</h2>{{ end }}
+    {{if not .Date.IsZero }}<h2 class="subtitle is-6">{{ .Date.Format "January 2, 2006" }} <small> {{ .ReadingTime }} min read</small></h2>{{ end }}
     <h1 class="title">{{ .Title }}</h1>
+    <br>
     {{ if and (.Site.Params.Info.adsense) (.Params.adsenseTop) }}
     {{ partial "adsense" . }}
     {{ end }}
